--- a/ui/dockerfile
+++ b/ui/dockerfile
@@ -1,15 +1,7 @@
 FROM node:14-alpine
 
-LABEL org.opencontainers.image.source = "https://github.com/r-dvl/portfolio"
-LABEL org.opencontainers.image.description "R-dVL's portfolio"
-
-# React ENV Vars
-ARG REACT_APP_TELEGRAM_BOT_TOKEN
-ENV REACT_APP_TELEGRAM_BOT_TOKEN $REACT_APP_TELEGRAM_BOT_TOKEN
-
-ARG REACT_APP_TELEGRAM_CHAT_ID
-ENV REACT_APP_TELEGRAM_CHAT_ID $REACT_APP_TELEGRAM_CHAT_ID
-
+LABEL org.opencontainers.image.source = "https://github.com/r-dvl/ansible-manager"
+LABEL org.opencontainers.image.description "Ansible Manager UI"
 
 WORKDIR /app
 
