Change crontab endpoints logic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     ports:
       - '8080:8080'
     volumes:
-      - ./home/ansible/logs:/logs
+      - /home/ansible/logs:/logs
+      - /var/spool/cron/crontabs:/crontabs
 
   ui:
     container_name: ansible-manager-ui
