--- a/ui/dockerfile
+++ b/ui/dockerfile
@@ -3,9 +3,8 @@ FROM node:18-alpine
 LABEL org.opencontainers.image.source = "https://github.com/r-dvl/ansible-manager"
 LABEL org.opencontainers.image.description "Ansible Dashboard"
 
-# React ENV Vars
-ARG API_URL
-ENV REACT_APP_API_URL $API_URL
+# Env vars
+ENV TZ=Europe/Madrid
 
 WORKDIR /app
 
@@ -21,4 +20,6 @@ EXPOSE 3000
 
 RUN npm install serve -g
 
-CMD ["serve", "-s", "dist"]
+COPY ./start.sh /start.sh
+
+CMD ["/bin/bash", "/start.sh"]
