--- a/ui/package.json
+++ b/ui/package.json
@@ -39,7 +39,8 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
-    "simplebar-react": "^3.2.4"
+    "simplebar-react": "^3.2.4",
+    "date-fns-tz": "1.1.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.4.0",
